--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MultiUavControl</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="google_maps_key">AIzaSyDfOrSCfiAsHA-luLLzGc0ccV6SfO3dsrI</string>
 </resources>
